# mcpserver

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/init/: 001_schema.sql  002_seed.sql
src/mcp_sales/: __init__.py  config.py  db.py  server.py
